Add animations to list

--- a/Presentations/2025-01-31/Math3_Presentation.html
+++ b/Presentations/2025-01-31/Math3_Presentation.html
@@ -423,13 +423,25 @@ Nehemias Ulloa
 <h2>Data Plot 2</h2>
 
 <img data-src="Math3_Presentation_files/figure-revealjs/lesions_plot-1.png" width="960" class="r-stretch"></section>
-<section id="formal-analysis" class="slide level2">
-<h2>Formal Analysis</h2>
+<section id="analysis" class="slide level2">
+<h2>Analysis</h2>
+<div class="fragment fade-in">
+<div class="fragment strike">
+<p>Mean</p>
+</div>
+</div>
+<div class="fragment fade-in">
+<div class="fragment strike">
+<p>Median</p>
+</div>
+</div>
 <div>
 <ul>
-<li class="fragment">I estimate a Mitigated Fraction</li>
+<li class="fragment">Mitigated Fraction
+<ul>
+<li class="fragment">MF is the relative increase in the probability that a vaccinate’s disease will be less severe than a nonvaccinate’s disease.</li>
 <li class="fragment">MF evaluates the intervention’s effect by the probability a subject will benefit from the intervention</li>
-<li class="fragment"></li>
+</ul></li>
 </ul>
 </div>
 <div class="quarto-auto-generated-content">
